--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "bin": {
     "kimi-server": "./bin/www"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["http-server","kimi-server"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kimi009/kimi-server.git"
+  },
+  "author": "kimi009",
   "license": "ISC",
   "dependencies": {
     "art-template": "^4.13.2",
